--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/jest": "^28.1.6",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "jest": "^28.1.3",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
